# rag-langgraph-takehome

./: .gitignore  NEXT_STEPS.md  README.md  example.env  pyproject.toml  requirements.txt  run_api.py
src/: config.py  logging_config.py  utils.py
src/api/: api.py  schemas.py
src/app/: graph.py  llm.py  main.py  memory.py  retrieval.py
src/data/: doc1.md  doc2.md  doc3.md  doc4.md  doc5.md
